# vrtlmod-test

./: .gitmodules  CMakeLists.txt  LICENSE  README.adoc
benchmark/: CMakeLists.txt
benchmark/cv32e40s/: CMakeLists.txt
benchmark/cva6/: CMakeLists.txt
